# WorldCup-Predictor

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.omc/: .project-memory.json.tmp.04010af6-72be-48ff-8efa-06942f99b763  project-memory.json
.omc/sessions/: 4d100617-a280-4fb9-8b43-f217a483e6df.json  7385dd58-4a8c-435a-8a93-eb1031f57ba7.json
.omc/state/: mission-state.json
.omc/state/checkpoints/: checkpoint-2026-06-23T00-59-54-070Z.json  checkpoint-2026-06-23T01-22-00-301Z.json
output/: comparison.csv  sim_Dixon-Coles.csv  sim_XGBoost.csv
src/data/: loader.py
src/evaluation/: metrics.py
src/features/: elo.py  engineering.py
src/models/: agent_model.py  base_model.py  poisson_model.py  xgboost_model.py
src/simulation/: monte_carlo.py
