[project]
name = "mundial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckduckgo-search>=5.0.0",
    "joblib>=1.3.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-nvidia-ai-endpoints>=0.1.0",
    "langgraph>=0.2.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "optuna>=3.3.0",
    "pandas>=2.0.0",
    "pandas-stubs~=3.0.3",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "tqdm>=4.66.0",
    "xgboost>=2.0.0",
]
